Some styling, add some features

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,35 @@
 <head>
-    <style> body { margin: 0; } </style>
+    <style> 
+        body { 
+            font-family: "Trebuchet MS", Helvetica, sans-serif;
+            margin: 0; 
+        } 
+        
+        #heading {
+            position: absolute;
+            display: block;
+            color: rgba(255, 255, 255, .6);
+            top: 0;
+            left: 0;
+            z-index: 100;
+            margin-top: 2rem;
+            margin-left: 2rem;
+        }
+
+        #heading h1 {
+            margin: 0;
+        }
+
+
+        .dot {
+            height: .8rem;
+            width: .8rem;
+            background-color: #ff0000;
+            border-radius: 50%;
+            display: inline-block;
+            vertical-align: middle;
+        }
+    </style>
 
     <script src="//unpkg.com/d3-dsv"></script>
     <script src="//unpkg.com/dat.gui"></script>
@@ -9,26 +39,45 @@
 
     <script src="//unpkg.com/force-graph"></script>
     <!--<script src="../../dist/force-graph.js"></script>-->
-  </head>
+</head>
   
-  <body>
+<body>
+    <div id="heading">
+        <h1>Yunnan Sourcing Catalog</h1>
+        <p id="totalNodes"></p>
+        <div>
+            Color Key <br>
+            <span>
+                <span class="dot"></span>Black
+            </span>
+        </div>
+    </div>
     <div id="graph"></div>
     <script>
-        const controls = { 'DAG Orientation': 'lr'};
+    const controls = { 'DAG Orientation': 'radialout'};
     const gui = new dat.GUI();
     gui.add(controls, 'DAG Orientation', ['td', 'lr', 'radialout', 'radialin',null])
       .onChange(orientation => graph && graph.dagMode(orientation));
     // graph config
     const NODE_REL_SIZE = 1;
     const graph = ForceGraph()
-        .dagMode('lr')
-        .dagLevelDistance(300)
+        .dagMode('radialout')
+        .dagLevelDistance(200)
         .backgroundColor('#101020')
         .linkColor(() => 'rgba(255,255,255,0.2)')
         .nodeRelSize(NODE_REL_SIZE)
         .nodeId('path')
         .nodeVal(node => 100 / (node.level + 1))
-        .nodeLabel(node => node.path.split('/').pop())
+        .nodeLabel(node => node.path.split('/').pop())/*
+        .nodeColor(node => {
+            if (node.path.includes('sheng') && node.path.includes('pu')) return 'aqua'
+            else if (node.path.includes('shou') && node.path.includes('pu')) return 'blue'
+            else if (node.path.includes('oolong')) return 'orange'
+            else if (node.path.includes('black')) return 'rgb(255, 0, 0)'
+            else if (node.path.includes('yellow')) return 'yellow'
+            else if (node.path.includes('white')) return 'grey'
+            else if (node.path.includes('green')) return 'green'
+        })*/
         .nodeAutoColorBy('module')
         .linkDirectionalParticles(2)
         .linkDirectionalParticleWidth(2)
@@ -38,9 +87,13 @@
             // Center/zoom on node
             graph.centerAt(node.x, node.y, 1000);
             graph.zoom(8, 2000);
-        });
+        })
+        .onNodeDragEnd(node => {
+            node.fx = node.x;
+            node.fy = node.y;
+        })
 
-    fetch('./data/yscatalog-tree2.csv')
+    fetch('./data/yscatalog-tree3.csv')
       .then(r => r.text())
       .then(d3.csvParse)
       .then(data => {
@@ -64,34 +117,11 @@
             links.push({source: parent, target: path, targetNode: node});
           }
         });
+        document.getElementById('totalNodes').innerHTML = `Total Products: ${nodes.length}`
         console.log(nodes)
         console.log(links)
         graph(document.getElementById('graph'))
           .graphData({ nodes, links });
       });
-        /*
-        fetch('./data/yscatalog-tree.json').then(res => res.json().then(data => {
-
-            const graph = ForceGraph()
-            (document.getElementById('graph'))
-                .graphData(data)
-                .nodeVal('name')
-                .linkTarget('dest')
-                .backgroundColor('#101020')
-                .linkColor(() => 'rgba(255,255,255,0.2)')
-                .nodeRelSize(6)
-                .nodeCanvasObject((node, ctx, globalScale) => {
-                    const label = node.name;
-                    const fontSize = 12/globalScale;
-                    ctx.font = `${fontSize}px Sans-Serif`;
-                    const textWidth = ctx.measureText(label).width;
-                    const bckgDimensions = [textWidth, fontSize].map(n => n + fontSize * 0.2); // some padding
-                    ctx.fillStyle = 'rgba(255, 255, 255, 0.8)';
-                    ctx.textAlign = 'center';
-                    ctx.textBaseline = 'middle';
-                    ctx.fillStyle = node.color;
-                    ctx.fillText(label, node.x, node.y);
-                });
-        }))*/
     </script>
-  </body>
+</body>
